--- a/site.html
+++ b/site.html
@@ -4,15 +4,16 @@
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>UKR.NET: Всі новини України, останні новини дня в Україні та Світі</title>
-<meta name="description" content="економіки, спорту, культури, технологій, шоу-бизнесу...">
+<meta name="description" content="1111,економіки, спорту, культури, технологій, шоу-бизнесу...">
 <meta name="keywords" content="новини1, новини2,новини4, новини, україна, відео, новини україни, україна новини, політика, економіка, випадки, технології, спорт, здоров&#39;я, культура, за кордоном, курйози, фоторепортаж, фото, відеорепортаж, відео">
 <meta name="robots" content="all">
-<meta name="publisher" content="UkrNet //www.ukr.net">
+<meta name="publisher" content="111UkrNet //www.ukr.net">
 <meta http-equiv="reply-to" content="webmaster@ukr.net">
 <meta name="distribution" content="global">
 <meta name="revisit-after" content="1 days">
 <meta name="google-site-verification" content="kxEm_cVhS0eF5tSyTPA6VJqdPWArTl_6s7cAMQR1YRU">
 <meta name="referrer" content="always"><meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <script>
 if (document.location.hash) {
