--- a/site.html
+++ b/site.html
@@ -11,9 +11,9 @@
 <meta http-equiv="reply-to" content="webmaster@ukr.net">
 <meta name="distribution" content="global">
 <meta name="revisit-after" content="1 days">
-<meta name="google-site-verification" content="kxEm_cVhS0eF5tSyTPA6VJqdPWArTl_6s7cAMQR1YRU">
 <meta name="referrer" content="always"><meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="robots" content="all">
 <script>
 if (document.location.hash) {
 var src = document.location.hash.substr(1);
